--- a/Module_02_workflow_orchestration/postgres/docker-compose.yaml
+++ b/Module_02_workflow_orchestration/postgres/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
     image: postgres
     container_name: postgres-db
     environment:
-      - POSTGRES_USER: kestra
-      - POSTGRES_PASSWORD: k3str4
-      - POSTGRES_DB: postgres-zoomcamp
+      - POSTGRES_USER=kestra
+      - POSTGRES_PASSWORD=k3str4
+      - POSTGRES_DB=postgres-zoomcamp
     ports:
       - "5431:5432"
     volumes:
