--- a/Module_02_workflow_orchestration/kestra/docker-compose.yaml
+++ b/Module_02_workflow_orchestration/kestra/docker-compose.yaml
@@ -32,6 +32,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/kestra-wd:/tmp/kestra-wd
     environment:
+      SECRET_GITHUB_ACCESS_TOKEN: Z2hwX01XNFdKQVJSMHFjRmRPOEZ5OVVhWkp4dnliWU81MzEzMGY2bA==
       KESTRA_CONFIGURATION: |
         datasources:
           postgres:
